[project]
name = "dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "gensim==4.3.3",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy==1.12.0",
    "seaborn>=0.13.2",
    "urllib3>=2.5.0",
]
